[package]
name = "ncmp2bs"
version = "0.1.0"
authors = ["MicroBlock <microblock@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.13.0" # Gives us egui, epi and web+native backends
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"], optional = true }
json = "0.12.4"
msgbox = "0.6.1"
urlencoding = "2.0.0"
[profile.dev]

debug = 0